# crabslab

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  README.md  SESSION.md
.github/workflows/: rust.yml
crates/craballoc/: Cargo.toml  README.md
crates/craballoc-test-shaders/: Cargo.toml
crates/craballoc-test-shaders/src/: lib.rs
crates/craballoc-test-wire-types/: Cargo.toml
crates/craballoc-test-wire-types/src/: lib.rs
crates/craballoc/src/: arena.rs  buffer.rs  lib.rs  range.rs  runtime.rs  slab.rs  test.rs  update.rs  value.rs
crates/craballoc/src/buffer/: manager.rs
crates/craballoc/src/range/: test.rs
crates/craballoc/src/slab/: wgpu_slab.rs
crates/craballoc/src/test/: wgpu.rs
crates/craballoc/src/test/shaders/: apply_data_changes.spv  manifest.json
crates/crabslab/: Cargo.toml
crates/crabslab-derive/: Cargo.toml
crates/crabslab-derive/src/: lib.rs
crates/crabslab/src/: array.rs  bits.rs  hologram.rs  id.rs  lib.rs  offset.rs  slab.rs  wgpu_slab.rs
crates/crabslab/src/impl_slab_item/: glam.rs  mod.rs  primitives.rs  tuples.rs
crates/example/: Cargo.toml
crates/example/src/: lib.rs  new_slab.rs  non_slab.rs  slab.rs
shaders/src/: main.rs
