[workspace]
members = [
    "crates/craballoc",
    "crates/crabslab",
    "crates/crabslab-derive",
]

# 'shaders' contains a test spirv shader to measure filesize when using crabslab
exclude = ["./shaders"]

resolver = "2"

[workspace.dependencies]
async-channel = "1.8"
bytemuck = { version = "1.13.0", features = ["derive"] }
env_logger = "0.11"
futures-lite = { version = "1.13" }
glam = { version = "0.30", default-features = false }
log = "0.4"
rustc-hash = "1.1"
snafu = "0.8"
tracing = "0.1.41"
wgpu = "26.0.0"

