[package]
name = "craballoc-test-wire-types"
version = "0.1.0"
edition = "2024"

[dependencies]
spirv-std.workspace = true

# dependencies for CPU code
[target.'cfg(not(target_arch = "spirv"))'.dependencies]
crabslab = { path = "../crabslab", features = ["default"] }
glam = { workspace = true, features = ["std"] }

# depedencies for GPU code
[target.'cfg(target_arch = "spirv")'.dependencies]
crabslab = { path = "../crabslab", default-features = false, features = ["glam"]  }
glam = { workspace = true, default-features = false, features = ["libm"] }
