[package]
name = "craballoc"
version = "0.1.0"
edition = "2021"

[features]
default = ["wgpu"]
wgpu = ["dep:wgpu"]

[dependencies]
async-channel.workspace = true
bytemuck.workspace = true
crabslab = { path = "../crabslab", version = "0.6" }
log.workspace = true
rustc-hash.workspace = true
snafu.workspace = true
tracing.workspace = true
wgpu = { workspace = true, optional = true }
