[package]
name = "craballoc"
version = "0.1.5"
edition = "2021"
description = "Slab allocator with RAII"
repository = "https://github.com/schell/crabslab"
license = "MIT OR Apache-2.0"
keywords = ["game", "graphics", "shader", "rendering"]
categories = ["rendering", "game-development", "graphics"]
readme = "README.md"

[features]
default = ["wgpu"]
wgpu = ["dep:wgpu"]

[dependencies]
async-channel.workspace = true
bytemuck.workspace = true
crabslab = { path = "../crabslab", version = "0.6.3" }
log.workspace = true
rustc-hash.workspace = true
snafu.workspace = true
tracing.workspace = true
wgpu = { workspace = true, optional = true }
