[package]
name = "crabslab"
version = "0.7.0"
edition = "2021"
description = "Slab allocator focused on GPU compute (rust-gpu)"
repository = "https://github.com/schell/crabslab"
license = "MIT OR Apache-2.0"
keywords = ["game", "graphics", "shader", "rendering"]
categories = ["rendering", "game-development", "graphics"]
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["glam", "futures-lite"]
futures-lite = ["dep:futures-lite"]
glam = ["dep:glam"]

[dependencies]
async-channel = { workspace = true, optional = true }
bytemuck = { workspace = true, optional = true }
futures-lite = { workspace = true, optional = true }
log = { workspace = true, optional = true }
crabslab-derive = { version = "0.4.7", path = "../crabslab-derive" }
snafu = { workspace = true , optional = true }

[target.'cfg(not(target_arch = "spirv"))'.dependencies]
glam = { workspace = true, features = ["std"], optional = true }

[target.'cfg(target_arch = "spirv")'.dependencies]
glam = { workspace = true, default-features = false, features = ["libm"], optional = true }
spirv-std.workspace = true

[dev-dependencies]
bytemuck.workspace = true
