[package]
name = "example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["new_slab"]
slab = ["dep:crabslab"]
non_slab = []
new_slab = []
 
[lib]
crate-type = ["lib", "dylib"]

[dependencies]
spirv-std = "0.9.0"

# gpu
[target.'cfg(target_arch = "spirv")'.dependencies]
crabslab = { path = "../crabslab", default-features = false, features = ["glam"], optional = true }
glam = { workspace = true, default-features = false, features = ["libm"]}

# cpu
[target.'cfg(not(target_arch = "spirv"))'.dependencies]
crabslab = { path = "../crabslab", features = ["default"],  optional = true  }
glam = { workspace = true, features = ["std"]}
